# closed-beta

./: .gitignore  Dockerfile  README.md  crowdin.yml  default_messages.json  first_time.sql  main.py  pyproject.toml  requirements.txt  slash.i18n.json
.github/workflows/: deploy_on_release.yml
cogs/: afk.py  basic.py  closedbeta.py  economy.py  info.py  log.py  mod.py  setup.py  snapshot.py  status.py
helpers/: __init__.py  convert.py  custom_args.py  custom_response.py  emojis.py  pagination.py  random_helper.py  regex.py
localization/: en.l10n.json  hi.l10n.json  hu.l10n.json
slash_localization/: en.l10n.json  hi.l10n.json  hu.l10n.json
